--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <!-- Basic -->
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no" />
 
-  <!-- Title -->
   <title>
-    Platformă Educațională SaaS | Colegiul Național de Informatică Tudor Vianu
+    Colegiul Național de Informatică Tudor Vianu
   </title>
-
-  <!-- Primary SEO -->
   <meta name="description" content="Platforma educațională oficială a Colegiului Național de Informatică Tudor Vianu. Accesează cursuri, note, resurse digitale și comunicare școală-elev într-un sistem SaaS modern." />
   <meta name="keywords" content="platforma educationala, SaaS educatie, Tudor Vianu, liceu informatica, catalog online, cursuri digitale, elevi profesori, scoala digitala" />
   <meta name="author" content="Colegiul Național de Informatică Tudor Vianu" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tudorvianu.ro/" />
-
-  <!-- Open Graph -->
   <meta property="og:locale" content="ro_RO" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Platformă Educațională SaaS - Tudor Vianu" />
@@ -30,27 +24,22 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Platforma Educațională Tudor Vianu" />
   <meta name="twitter:description" content="Educație digitală pentru elevi și profesori. Platformă SaaS modernă." />
   <meta name="twitter:image" content="https://tudorvianu.ro/og-image.jpg" />
 
-  <!-- PWA / SaaS App -->
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0d3b2e" />
   <meta name="application-name" content="Tudor Vianu Platform" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="/vianu-v2.png" />
 
-  <!-- Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
